# SecureAIForge_saif

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  saif.sh
alembic/: env.py
alembic/versions/: 0001_initial_foundation.py  0002_authorized_testing_mode.py  0003_pipeline_discovery_tables.py  0004_pipeline_timestamps.py  0005_orchestration.py  0006_test_run_summary.py  0007_auth_sessions.py  0008_adaptive_findings.py  0009_ai_call_runs.py  0010_auth_tokens.py  0011_case_mgmt.py  0012_profiles_inventory.py  0013_scan_progress.py  (+11 more)
configs/: credentials.example.yaml  tools.yaml
docs/: authentication.md  authorization-testing.md  dashboard.md  destructive-testing-policy.md  development-status.md  faq.md  github-release-checklist.md  installation.md  network-testing-roadmap.md  ollama-ai-usage.md  quick-start.md  reporting.md  screenshots.md  troubleshooting.md  web-api-testing.md
examples/: credentials.example.yaml  scan-config-blackbox-api.yaml  scan-config-crapi.yaml  scan-config-graybox-api.yaml
saif/: __init__.py  cli.py  config.py
tests/: test_browser_capture.py  test_dashboard_actions.py  test_dashboard_api.py  test_dashboard_binding.py  test_dashboard_templates.py  test_debug_export.py  test_execution_profiles.py  test_install_agent.py  test_json_safety.py  test_pentest_engine.py  test_progress_events.py  test_scan37_execution_wiring.py  test_testcase_registry.py  test_tool_manager_agent.py
(+105 files in other folders)
