[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saif"
version = "0.1.0"
description = "SAIF - Secure AI Forge for AI-assisted authorized Web/API security testing, evidence, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.111",
    "httpx>=0.27",
    "jinja2>=3.1",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.scripts]
saif = "saif.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["saif*"]

[tool.setuptools.package-data]
saif = ["dashboard/templates/*.html", "dashboard/static/*.css", "dashboard/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
